k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  labels:
    app: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: 963665911471.dkr.ecr.us-east-1.amazonaws.com/poc:IMAGE_TAG
          ports:
            - containerPort: 4000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ecr-secret
