k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  selector:
    app: node-app
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
